Add pgdata volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,11 @@ services:
     environment:
       POSTGRES_DB: bounca
       POSTGRES_PASSWORD: changeit
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
+    volumes:
+      - "./pgdata:/var/lib/postgresql/data/pgdata"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
